# Zerodrift-V2

./: README.md  real_measurements.csv  verify_real_measurements.py
demo-program/harness/: Cargo.toml
demo-program/harness/src/: main.rs
demo-program/program/: Cargo.toml
demo-program/program/src/: lib.rs
src/: affine_envelope.py
tests/: test_affine_envelope.py
