[package]
name = "cu_demo_harness"
version = "0.1.0"
edition = "2021"
publish = false

# Isolated workspace so this harness's lockfile/target dir don't get adopted
# by an upward cargo workspace search.
[workspace]

[[bin]]
name = "cu_demo_harness"
path = "src/main.rs"

[dependencies]
mollusk-svm = "0.13.0"
solana-instruction = "3.2.0"
solana-pubkey = { version = "4.1.0", features = ["curve25519"] }
solana-account = "3.4.0"
